--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/KlimMalgin/real-time-sync-server#readme",
   "dependencies": {
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "websocket": "^1.0.24"
   },
   "devDependencies": {
     "uglifyjs-webpack-plugin": "^0.4.6"
