--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "real-time-sync-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app/client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "IS_CLIENT=true ./node_modules/.bin/webpack --progress",
+    "dev-open": "IS_CLIENT=true ./node_modules/.bin/webpack-dev-server --open --hot",
+    "build": "NODE_ENV=production IS_CLIENT=true ./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -17,10 +19,22 @@
   },
   "homepage": "https://github.com/KlimMalgin/real-time-sync-server#readme",
   "dependencies": {
-    "webpack": "^3.6.0",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
-    "uglifyjs-webpack-plugin": "^0.4.6"
+    "babel-core": "^6.25.0",
+    "babel-eslint": "7",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
